--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "description": "Replicate dat using streams",
   "dependencies": {
     "dat-replication-protocol": "^2.0.0",
+    "debug": "^1.0.4",
     "request": "^2.36.0",
     "through2": "^0.4.2"
   },
