--- a/package.json
+++ b/package.json
@@ -9,9 +9,9 @@
   "dependencies": {
     "dat-replication-protocol": "^4.1.2",
     "debug": "^1.0.4",
-    "pump": "^0.3.5",
+    "pumpify": "^1.3.2",
     "request": "^2.36.0",
-    "through2": "^0.5.1"
+    "through2": "^0.6.1"
   },
   "bugs": {
     "url": "https://github.com/mafintosh/dat-replicator/issues"
