--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "dat-replication-protocol": "^4.1.2",
     "debug": "^1.0.4",
+    "pump": "^0.3.5",
     "pumpify": "^1.3.2",
     "request": "^2.36.0",
     "through2": "^0.6.1"
