--- a/package.json
+++ b/package.json
@@ -12,8 +12,7 @@
     "pump": "^0.3.5",
     "pumpify": "^1.3.2",
     "request": "^2.36.0",
-    "through2": "^0.6.1",
-    "url": "^0.10.1"
+    "through2": "^0.6.1"
   },
   "bugs": {
     "url": "https://github.com/mafintosh/dat-replicator/issues"
